# testCI

./: .travis.yml  CMakeLists.txt  build.sh  main.cpp
.github/workflows/: .travis.yml
